--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools { 
-        maven 'Maven 3.9.2' 
+        M2 'Maven 3.9.2' 
         jdk 'jdk11' 
     }
     stages {
