--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     tools { 
-        M2 'Maven 3.9.2' 
+        maven 'Maven 3.9.2' 
         jdk 'jdk11' 
     }
     stages {
@@ -9,7 +9,7 @@ pipeline {
             steps {
                 sh '''
                     echo "PATH = ${PATH}"
-                    echo "M2_HOME = ${M2_HOME}"
+                    echo "M2_HOME = ${M2}"
                 ''' 
             }
         }
