--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -1,15 +1,15 @@
 pipeline {
     agent any
     tools { 
-        maven 'Maven 3.9.2' 
-        jdk 'jdk11' 
+        M2 'Maven 3.9.2' 
+        JDK 'jdk11' 
     }
     stages {
         stage ('Initialize') {
             steps {
                 sh '''
                     echo "PATH = ${PATH}"
-                    echo "M2_HOME = ${M2}"
+                    echo "M2" = ${M2}"
                 ''' 
             }
         }
