--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     tools { 
         maven 'Maven 3.9.2' 
-        JDK 'jdk11' 
+        jdk 'jdk11' 
     }
     stages {
         stage ('Initialize') {
