--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -1,17 +1,24 @@
 pipeline {
     agent any
-    tools { 
-        maven 'Maven 3.9.2' 
-        jdk 'jdk11' 
+    tools {
+        maven 'Maven 3.3.9'
+        jdk 'jdk11'
     }
     stages {
         stage ('Initialize') {
             steps {
                 sh '''
                     echo "PATH = ${PATH}"
-                    echo "M2" = ${M2}"
-                ''' 
+                    echo "M2_HOME = ${M2_HOME}"
+                '''
             }
+        }
+
+        stage ('Build') {
+            steps {
+                sh 'mvn -Dmaven.test.failure.ignore=true install' 
+            }
+            
         }
     }
 }
