--- a/pipelines/Jenkinsfile
+++ b/pipelines/Jenkinsfile
@@ -16,7 +16,8 @@ pipeline {
 
         stage ('Build') {
             steps {
-                sh 'mvn -Dmaven.test.failure.ignore=true install' 
+                echo 'This is a minimal pipeline.'
+                #sh 'mvn -Dmaven.test.failure.ignore=true install' 
             }
             
         }
